Nuevos arreglos para Sprint 2 y actualización del sprint 3
